src/test/deca/codegen/valid/MoinsUnPlusMoinsInit_f.deca
// Description:
//    tests simple addition
//
// Resultats:
//
//
// Historique:
//    cree le 20/01/2017
{
float x = 1.0;
print((-1.0)+(-x));
}
