src/test/deca/codegen/invalid/overflow_add_f.deca
// Description:
//    add trop grande
//
// Resultats:
//   renvoie une erreur
//
//
// Historique:
//    cree le 19/01/2017
{
float x;
x = 299999999999999999999999999999999999999.0 + 299999999999999999999999999999999999999.0;
print(x);
}